--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -42,15 +42,17 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         generator that produces all the registers of this node
         """
         {% for child_node in node.children(unroll=False) -%}
-            {%- if isinstance(child_node, systemrdlRegNode) %}
-                {% if child_node.is_array %}
+            {%- if not child_node.get_property('python_hide', default=False) or show_hidden %}
+                {%- if isinstance(child_node, systemrdlRegNode) %}
+                    {% if child_node.is_array %}
         if unroll:
             for child in self.{{safe_node_name(child_node)}}:
                 yield child
         else:
             yield self.{{safe_node_name(child_node)}}
-                {% else %}
+                    {% else %}
         yield self.{{safe_node_name(child_node)}}
+                    {%- endif %}
                 {%- endif %}
             {%- endif %}
         {% endfor %}
