--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -31,7 +31,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
     """
 
         {%- if 'encode' in node.list_properties() %}
-    __enum_cls = {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls
+        {%- set enumcls_name = get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden) + '_enumcls' %}
+    __enum_cls = {{enumcls_name}}
         {% endif %}
 
     __slots__ : List[str] = []
@@ -45,7 +46,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
         return self.__enum_cls
 
         {% if node.is_sw_readable %}
-    def decode_read_value(self, value: int) -> {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls:
+    def decode_read_value(self, value: int) -> {{enumcls_name}}:
         """
         extracts the field value from a register value, by applying the bit
         mask and shift needed and conversion to the enum associated with the
@@ -66,7 +67,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
 
         return self.enum_cls(field_value)
 
-    {% if asyncoutput %}async {% endif %}def read(self) -> {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls:
+    {% if asyncoutput %}async {% endif %}def read(self) -> {{enumcls_name}}:
         """
         read the register and then perform the necessary actions, to report the
         value as the enumeration including:
@@ -83,23 +84,23 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
             {% endif %}
 
         {% if node.is_sw_writable %}
-    def encode_write_value(self, value: {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls) -> int: # type: ignore[override]
+    def encode_write_value(self, value: {{enumcls_name}}) -> int: # type: ignore[override]
 
         if not isinstance(value, self.enum_cls):
-            raise TypeError('value must be an {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node)}}_enumcls but got %s' % type(value))
+            raise TypeError('value must be an {{enumcls_name}} but got %s' % type(value))
 
         return super().encode_write_value(value.value)
 
-    {% if asyncoutput %}async {% endif %}def write(self, value : {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node)}}_enumcls) -> None: # type: ignore[override]
+    {% if asyncoutput %}async {% endif %}def write(self, value : {{enumcls_name}}) -> None: # type: ignore[override]
 
         if not isinstance(value, self.enum_cls):
-            raise TypeError('value must be an {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node)}}_enumcls but got %s' % type(value))
+            raise TypeError('value must be an {{enumcls_name}} but got %s' % type(value))
 
         {% if asyncoutput %}await {% endif %}super().write(value.value)
         {% endif %}
 
     @property
-    def default(self) -> Optional[{{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls]:
+    def default(self) -> Optional[{{enumcls_name}}]:
         """
         The default value of the field
 
@@ -111,7 +112,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
 
         if int_default is not None:
             if int_default in self._enum_values:
-                return {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node, show_hidden)}}_enumcls(int_default)
+                return {{enumcls_name}}(int_default)
             else:
                 msg = f'reset value {int_default:d} is not within the enumeration for the class'
                 self._logger.warning(msg)
