--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -17,7 +17,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #}
 
 {% include "header.py.jinja" with context %}
-{% if uses_enum %}from enum import EnumMeta, IntEnum, unique{% endif %}
+{% if uses_enum %}from enum import EnumMeta{% endif %}
+from enum import IntEnum, unique
 from typing import Tuple
 from typing import Iterator
 from typing import List
@@ -37,6 +38,7 @@ import warnings
 from contextlib import {% if asyncoutput %}async{% endif %}contextmanager
 
 from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import Node
+from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import UDPStruct
 
 from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib  import AddressMapArray, RegFileArray
 {% if asyncoutput -%}
@@ -86,6 +88,7 @@ from {% if skip_lib_copy %}src.peakrdl_python.{% else %}..{% endif %}lib import 
 {% from 'addrmap_memory.py.jinja' import memory_class with context %}
 {% from 'reg_definitions.py.jinja' import register_class_attributes with context %}
 {% from 'reg_definitions.py.jinja' import child_register_getter with context %}
+{% from 'addrmap_udp_property.py.jinja' import udp_property with context %}
 
 {%- macro regfile_or_addr_instance(node) %}
     {%- if not node.get_property('python_hide', default=False) or show_hidden %}
@@ -214,6 +217,8 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             {%- endfor %}
             }
 
+    {{ udp_property(node) }}
+
     {{ child_register_getter(node) }}
 
         {% if asyncoutput %}
@@ -335,6 +340,8 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             {%- endfor %}
             }
 
+    {{ udp_property(node) }}
+
     {{ child_register_getter(node) }}
     {% if asyncoutput %}
     {{ child_getter(node, "get_sections", "AsyncAddressMap, AsyncRegFile, AsyncAddressMapArray, AsyncRegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
@@ -408,7 +415,13 @@ class {{get_fully_qualified_type_name(node)}}_array_cls({% if asyncoutput %}Asyn
 {%- endmacro %}
 
 
-
+{% for property_enum in dependent_property_enum %}
+@unique
+class {{property_enum.type_name}}_property_enumcls(IntEnum):
+    {% for value_of_enum_needed in property_enum -%}
+    {{ value_of_enum_needed.name.upper() }} = {{ value_of_enum_needed.value }}  {%- if value_of_enum_needed.rdl_desc is not none -%}# {{ value_of_enum_needed.rdl_desc }} {%- endif %}
+    {% endfor %}
+{% endfor %}
 
 {% if uses_enum %}
 # root level enum definitions
